# esp_mqtt

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_https_ota.c  app_https_ota.h  app_main.c  app_mqtt.c  app_mqtt.h  app_smartconfig.c  app_smartconfig.h  app_sntp.c  app_sntp.h  app_timer.c  app_timer.h  app_touch.c  app_touch.h  app_uart.c  app_uart.h  app_user.c  app_user.h
server_certs/: ca_cert.pem
